CS_WEB/css/default.css
/* ... */
#slide .description p, #slide .description a {
	width: 800px;
	display: block;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}
#slide .mask {
	position: absolute;
	bottom: 0px;
	left: 0px;
	width: 100%;
	height: 145px;
	background-color: #000000;
	opacity: 0.4;
	filter: alpha(opacity=40);
	z-index: 0;
}
#slide .description a {
	color: #fff;
	text-decoration: none;
	font-size: x-large;
}
#slide .description p {
	font-size: large;
	color: #f0f0f0;
}
.columns {
	height: auto;
	width: 100%;
	padding-top: 10px;
	float: left;
}
.columns a {
	color: #000;
	display: block;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}
#column1 {
	width: 22%;
	float: left;
}
#column2 {
	width: 74%;
	float: right;
}
#column3 {
	width: 730px;
	float: left;
}
#column4 {
	width: 230px;
	float: right;
}
#column5 {
	width: 360px;
	float: left;
}
#column6 {
	width: 600px;
	float: right;
}
.column {
	margin: 5px 10px 5px 10px;
}
.col_header {
	width: 100%;
	height: 27px;
	border-bottom: 2px solid #671111;
	box-shadow: 0px 2px 2px -2px #671111;
	overflow: hidden;
	position: relative;
	-webkit-transition: 0.2s linear;
	-moz-transition: 0.2s linear;
	-o-transition: 0.2s linear;
	transition: 0.2s linear;
}
.col_header.hidden {
	width: 0%;
}
.header_title {
	padding-left: 5px;
	font-size: large;
	text-shadow: 0 0 3px rgba(0, 0, 0, .3);
	position: absolute;
	-webkit-transition: 0.5s;
	-moz-transition: 0.5s;
	-o-transition: 0.5s;
	transition: 0.5s;
}
.header_more {
	text-align: right;
	padding-right: 5px;
	line-height: 27px;
	font-size: 12px;
	position: absolute;
	right: 0px;
	-webkit-transition: 0.5s;
	-moz-transition: 0.5s;
	-o-transition: 0.5s;
	transition: 0.5s;
}
.header_more a {
	color: #808080;
	text-decoration: none;
}
.header_title.hidden, .header_more.hidden {
	top: 30px;
}
.itemlist_container {
	padding-top: 4px;
	width: 100%;
	height: 125px;
	position: relative;
	overflow: hidden;
}
.itemlist {
	width: 100%;
	padding-top: 2px;
	padding-right: 5px;
	line-height: 20px;
	table-layout: fixed;
	position: relative;
	-webkit-transition: 0.5s;
	-moz-transition: 0.5s;
	-o-transition: 0.5s;
	transition: 0.5s;
}
.itemlist a:hover {
	color: #89181b;
}
.itemlist.hidden {
	top: -125px;
}
.item_dot {
	width: 10px;
	background: url(../images/dot.gif) no-repeat;
	background-position: 50% 50%;
}
.item_title {
	padding-left: 3px;
	text-align: left;
	font-size: small;
}
.item_title a {
	color: #000;
	text-decoration: none;
}
.item_date {
	color: #606060;
	width: 75px;
	text-align: right;
	font-size: small;
}
.imagelist_container {
	width: 720px;
	height: 180px;
	position: relative;
	overflow: hidden;
}
.imagelist {
	width: 720px;
	position: absolute;
	-webkit-transition: 0.5s;
	-moz-transition: 0.5s;
	-o-transition: 0.5s;
	transition: 0.5s;
}
.imagelist a {
	float: left;
	position: relative;
}
.imagelist.hidden {
	top: -180px;
}
.image_container {
	width: 160px;
	height: 160px;
	margin: 10px;
	display: block;
	overflow: hidden;
	position: relative;
	border-radius: 10px;
}
.image_container img {
	width: 100%;
	height: 100%;
	border: none;
}
.image_popup {
	position: absolute;
	bottom: -45px;
	left: 0px;
	width: 100%;
	height: 45px;
	background-color: #000;
	opacity: 0.6;
	filter: alpha(opacity=60);
	text-decoration: none;
	line-height: 45px;
	font-size: large;
	color: #fff;
	padding-left: 10px;
	-webkit-transition: 0.1s;
	-moz-transition: 0.1s;
	-o-transition: 0.1s;
	transition: 0.1s;
}
.gallerylist_container {
	width: 600px;
	height: 140px;
	position: relative;
	overflow: hidden;
}
.gallery {
	width: 575px;
	height: 140px;
	position: absolute;
	left: 12px;
	top: 15px;
	-webkit-transition: 0.5s;
	-moz-transition: 0.5s;
	-o-transition: 0.5s;
	transition: 0.5s;
}
.gallery a {
	float: left;
	position: relative;
	overflow: visible;
	width: 115px;
	height: 110px;
}
.gallery.hidden {
	top: -140px;
}
.gallery_container {
	position: absolute;
	top: 0;
	left: 0;
	width: 115px;
	height: 110px;
	z-index: 0;
	-webkit-transition: 0.1s;
	-moz-transition: 0.1s;
	-o-transition: 0.1s;
	transition: 0.1s;
}
.gallery_container span {
	position: absolute;
	left: 0;
	top: 0;
	color: #fff;
	text-shadow: 0 0 5px rgba(0, 0, 0, 1.0);
	text-decoration: none;
	display: none;
	width: 100%;
	height: 100%;
	font-size: x-large;
	text-align: center;
	line-height: 135px;
	z-index: 10;
	filter: glow(color=black,strength=1);
}
.gallery_image {
	display: block;
	width: 100%;
	height: 100%;
	-webkit-transition: 0.1s;
	-moz-transition: 0.1s;
	-o-transition: 0.1s;
	transition: 0.1s;
}
.gallery_image img {
	position: absolute;
	height: 100%;
	width: 100%;
	border: none;
}
.gallery_padding {
	display: block;
	position: absolute;
	width: 100%;
	height: 100%;
	opacity: 0.3;
	filter: alpha(opacity=30);
	background-color: #000;
	z-index: 5;
	-webkit-transition: 0.1s;
	-moz-transition: 0.1s;
	-o-transition: 0.1s;
	transition: 0.1s;
}
#sidebar_container {
	float: right;
	width: 180px;
	padding-top: 10px;
	overflow: hidden;
	-webkit-transition: 0.3s;
	-moz-transition: 0.3s;
	-o-transition: 0.3s;
	transition: 0.3s;
}
#sidebar_container.hidden {
	width: 0px;
}
#sidebar {
	width: 180px;
}
#sidebar.float {
	position: fixed;
	top: 50px;
}
#sidebar_header {
	height: 33px;
	border-bottom: 2px solid #89181b;
	line-height: 33px;
	text-align: right;
	display: block;
	font-size: 16px;
	padding-right: 10px;
	text-shadow: 0 0 4px rgba(0, 0, 0, .5)
}
#sidebar_navi {
	padding-top: 10px;
	width: 100%;
	height: auto;
}
#sidebar_navi ul {
	list-style: none;
	width: 100%;
}
#sidebar_navi ul li {
	text-align: right;
	line-height: 25px;
	margin-bottom: 5px;
	margin-right: 10px;
}
#sidebar_navi ul li a {
	text-decoration: none;
	color: #000;
}
#article_container {
	width: 800px;
	height: auto;
	float: left;
	padding-top: 10px;
}
/* ... */

